<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".UserModel.ProfileActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout">


            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:src="@drawable/dublinsky"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:clickable="true"
                app:civ_border_width="3dp"
                app:civ_border_color="#FFFFFFFF"

                android:id="@+id/userProfileImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-130dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/user" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="@color/bg_main"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <ImageView
                    android:id="@+id/editUserInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:src="@android:drawable/ic_menu_edit" />

                <TextView
                    android:id="@+id/userFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:text="@string/full_name"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userFullName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="52dp"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/userMail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/userMobile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/user_mobile_number" />

                <Button
                    android:id="@+id/deleteUserInformationBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/bg_main"
                    android:shadowColor="@android:color/transparent"
                    android:text="@string/delete_account"
                    android:textColor="@color/white" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>