<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login"
            android:onClick="onNavigationItemSelected"/>
        <item
            android:id="@+id/nav_recentTransaction"
            android:icon="@drawable/recentbooking"
            android:title="@string/recent_transaction" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/registration"
            android:title="@string/register" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />


    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/signout"
                android:title="@string/log_out" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/aboutapp"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
