...
    <string name="car_number_plate">Car Number Plate</string>
    <string name="pay_now">Pay Now</string>
    <string name="email">Email</string>

    <string name="show_password">Show Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>

    <string name="login">Login</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="register">Register</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
...
    <string name="what_we_collect">To get the best of our app we collect</string>
    <string name="persona">Persona:</string>
    <string name="developer_name">Abdoulaye Kaloga</string>
    <string name="developer_degree">Bachelor in Business and Information Systems</string>
    <string name="search_car_park">Search car park...</string>
    <string name="profile">Profile</string>
    <string name="update_information">Update Information</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_mobile_number">0123456789</string>


</resources>

